[package]
name = "overlay"
version = "0.1.5"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
shared = { path = "../shared" }
global-hotkey = "0.6"
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
] }
