[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
shared = { path = "../shared" }
ureq = { version = "2", features = ["json"] }
semver = "1"

[build-dependencies]
winresource = "0.1"
