[package]
name = "tracker"
version = "0.2.2"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
shared = { path = "../shared" }
ureq = { version = "2", features = ["json"] }
semver = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
winresource = "0.1"
